--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,7 +8,7 @@
 		<p>
 			The <a href="http://www.railstutorial.org/">
 				<em>
-					Ruby on Rails
+					Ruby on Rails!
 					Tutorial
 				</em>
 			</a> is a
