--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,17 @@
     <title><%= full_title(yield(:title)) %></title>
 	 	<%= render 'layouts/rails_default' %>
 		 <%= render 'layouts/shim' %>
-    <![endif]-->
   </head>
 
   <body>
   	<%= render 'layouts/header' %>
   		<div class="container">
+				<% flash.each do |message_type, message| %>
+				<%= content_tag(:div, message, class:"alert alert-#{message_type}")%>
+				<% end %>
   			<%= yield %>
 				<%= render 'layouts/footer' %>
+				<%= debug(params) if Rails.env.development? %>
   		</div>
 	</body>
 	
