--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,23 +5,11 @@
 	</head>
 
 	<body>
-		<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
-
-  <h2>
-    This is the home page for the
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-  <% unless logged_in?%>
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-  <% end%>
-</div>
-
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
-
-            <%#= image_tag("kitten.jpg", alt: "Kitten") %>
+    <% if logged_in? %>
+      <%= render "shared/logged_in" %>
+    <% else %>
+      <%= render "shared/not_logged_in" %>
+    <% end %>
 	</body>
 	
 </html>
