--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 
     <%= form_for(@user, url: yield(:path)) do |form| %>
-        <%= render 'shared/error_messages'%>
+        <%= render 'shared/error_messages', object: form.object %>
 
         <%= form.label :name %>
         <%= form.text_field :name, class: 'form-control' %>
